--- a/src/main/resources/templates/profile/orders.html
+++ b/src/main/resources/templates/profile/orders.html
@@ -65,7 +65,8 @@
                 </div>
                 <div class="orderShipmentInfo orderInfo">
                     <span class="orderTitle">Delivery Address:</span>
-                    <span class="orderAddressStreetName">Street: N/A</span>
+                    <span class="orderAddressStreetName">Address: N/A</span>
+                    <span class="orderAddressStreetName2" style="display: none">Address 2: N/A</span>
                     <span class="orderAddressCity">City: YN/A</span>
                     <span class="orderAddressPostcode">Postcode: N/A</span>
                 </div>
