--- a/src/main/resources/static/styles/productExample.css
+++ b/src/main/resources/static/styles/productExample.css
@@ -92,18 +92,25 @@ html, body
     margin-top: 2vh;
     font-size: 24px;
     padding: 10px 15px;
-    color: var(--actionColor);
+    color: white;
+    /*border: 2px solid white;*/
+    /*color: var(--actionColor);*/
     border: 2px solid var(--actionColor);
     width: 30%;
-    background: rgba(0,0,0,0);
-    border-radius: 5px;
+    background: var(--actionColor);
+    /*background: rgba(0,0,0,0);*/
+    /*border-radius: 5px;*/
+    border-radius: 10px;
 }
 
 .createNowBtn:hover
 {
-    color:white;
-    background: var(--actionColor);
-    border-radius: 10px;
+    color:var(--actionColor);
+    background: white;
+    /*color:white;*/
+    /*background: var(--actionColor);*/
+    /*border-radius: 10px;*/
+    border-radius: 5px;
 }
 
 @media all and (min-width: 200px) and (max-width: 1024px)
