--- a/src/main/resources/templates/profile/treeCollections.html
+++ b/src/main/resources/templates/profile/treeCollections.html
@@ -53,8 +53,8 @@
                         <span class="spanBoxText" th:text="#{collection.boxes}"></span>
                     </section>
                     <section class="infoContent">
-                        <span th:text="#{collection.box.content}"></span>
-                        <span class="boxContent">James,. Hilda, Nika and more...</span>
+                        <span style="display: none" th:text="#{collection.box.content}"></span>
+                        <span style="display: none" class="boxContent">James,. Hilda, Nika and more...</span>
 
                         <span th:text="#{collection.amount}"></span>
                         <span class="amount">3</span>
