FINAL BOYS WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
LETS GOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO

--- a/src/main/resources/templates/home/unsubscribeSuccess.html
+++ b/src/main/resources/templates/home/unsubscribeSuccess.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Failed to unsubscribe</title>
     <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon">
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript1"></script>
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript2"></script>
 </head>
 <body>
     <p>Unsubscribed</p>
