--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -43,6 +43,8 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
     <meta property="og:image" content="https://treecreate.dk/img/images/treeDesign/tree1.svg"/>
     <!--  End of FaceBook headers -->
 
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript1"></script>
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript2"></script>
 </head>
 <body>
 <section th:replace="products/productTemplate :: #navigationContainer"></section>
