--- a/src/main/resources/templates/products/mobile.html
+++ b/src/main/resources/templates/products/mobile.html
@@ -28,6 +28,8 @@
             text-align: center;
         }
     </style>
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript1"></script>
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript2"></script>
 </head>
 <body>
     <section th:replace="products/productTemplate :: #navigationContainer"></section>
