--- a/src/main/resources/templates/home/orderTermsAndConditionsDanish.html
+++ b/src/main/resources/templates/home/orderTermsAndConditionsDanish.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Terms and Conditions</title>
     <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon">
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript1"></script>
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript2"></script>
 </head>
 <body style="background-color: #f2f2f2; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 <div style="max-width: 40em; margin: auto; padding: 5vh 0; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff;">
