--- a/src/main/resources/templates/payment/test.html
+++ b/src/main/resources/templates/payment/test.html
@@ -6,6 +6,8 @@
     <link th:href="@{/styles/payment.css}" rel="stylesheet">
     <script th:src="@{/js/payment.js}"></script>
     <script th:src="@{/js/cookiePrompt.js}"></script>
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript1"></script>
+    <script th:replace="products/productTemplate :: #googleAnalyticsScript2"></script>
 </head>
 <body onload="updateHash()">
 <form action="https://pay.nordeaconnect.com/v1/form" method="post">
