--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -22,7 +22,7 @@
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/basket.js}"></script>
     <script th:src="@{/js/addToBasket.js}"></script>
-    <script th:src="@{/js/mobileRedirect.js}"></script>
+<!--    <script th:src="@{/js/mobileRedirect.js}"></script>-->
     <script th:src="@{/js/cookiePrompt.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -65,7 +65,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 </script>
 <!-- End of Load FaceBook SDK for JavaScript -->
 
-<script>isMobile()</script>
+<!--<script>isMobile()</script>-->
 
 <section id="contentContainer">
     <div id="content">
