--- a/src/main/resources/templates/home/productExample.html
+++ b/src/main/resources/templates/home/productExample.html
@@ -35,7 +35,7 @@
                             <span th:text="#{home.create.now}"></span>
                         </button>
                     </section>
-                    <section id="development">
+                    <section id="development" class="mobileView">
                         <img th:src="@{~/img/productPage/Artboard 4.png}" alt="Tree Design" class="image">
                         <div class="text">
                             <span class="title" th:text="#{home.size.title}"></span><br>
@@ -49,15 +49,16 @@
                         </div>
                     </section>
 
-                    <section id="familytrees">
+                    <section id="familytrees" class="mobileView">
+                        <img th:src="@{~/img/productPage/Artboard 1.png}" alt="Tree Design" class="image displayMobile" style="margin:0!important">
                         <div class="text">
                             <span class="title" th:text="#{home.package.title}"></span><br>
                             <span th:text="#{home.package.text}"></span>
                         </div>
-                        <img th:src="@{~/img/productPage/Artboard 1.png}" alt="Tree Design" class="image" style="margin:0!important">
+                        <img th:src="@{~/img/productPage/Artboard 1.png}" alt="Tree Design" class="image noMobileDisplay" style="margin:0!important">
                     </section>
 
-                    <section id="goal">
+                    <section id="goal" class="mobileView">
                         <img th:src="@{~/img/productPage/Artboard 2.png}" alt="Tree Design" class="image" style="margin-top:4vh;">
                         <div class="text">
                             <span class="title" th:text="#{home.team.title}"></span><br>
