--- a/src/main/resources/templates/products/mobile.html
+++ b/src/main/resources/templates/products/mobile.html
@@ -38,7 +38,7 @@
             <div id="productContainer">
                 <div id="product">
                     <div class="center">
-                        <h2 style="font-size: 50px">Ups!</h2>
+                        <h2 style="font-size: 50px">Woops!</h2>
                         <h3><span th:text="#{mobile.text}"></span></h3>
                         <h3>
                             <span th:text="#{mobile.text.two}"></span>
