--- a/src/main/resources/static/styles/basket.css
+++ b/src/main/resources/static/styles/basket.css
@@ -1,3 +1,5 @@
+@import "checkBox.css";
+
 #pageContainer
 {
     min-height: 100vh;
@@ -71,13 +73,13 @@
 
 #acceptAndPay, #applyDiscountBtn
 {
-    width: 400px;
+    width: 100%;
     padding: 5px 2vw;
     border-radius: 12px;
     border: none;
     background-color: var(--actionColor);
     color: white;
-    font-size: var(--fontRegular);
+    font-size: var(--fontSubtitle);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -97,16 +99,23 @@
     margin-bottom: 1vh;
 }
 
-#applyDiscountBtn
+.applyDiscountBtn
 {
-    width: 50%;
-    margin: 1vh 25%;
+    width: 100%;
+    margin-top: 2vh;
     min-width: 100px;
     padding: 2.5%;
     background-color: var(--actionColor);
     border-radius: 12px;
+    font-size: 26px;
     border: none;
     color: white;
+}
+
+.acceptButton
+{
+    background-color:#28C553 !important;
+    font-size: 26px;
 }
 
 #orderInformation
@@ -154,7 +163,8 @@
 
 .orderSummaryValue
 {
-    text-align: left;
+    text-align: right;
+    padding-right: 9px !important;
 }
 
 .orderSummaryFiller
@@ -170,4 +180,67 @@
 .totalPriceRow
 {
     font-size: var(--fontRegular);
+}
+
+input[type=checkbox]
+{
+     margin-top: 20px;
+     margin-right: 10px;
+}
+
+@media all and (min-width: 200px) and (max-width: 1024px)
+{
+    input[type=checkbox]
+    {
+        margin-top: 20px;
+        margin-right: 15px;
+        transform: scale(0.5);
+    }
+
+    .border
+    {
+        border: none;
+        padding: 0;
+    }
+
+    .borderRemove
+    {
+        margin-top: 0;
+        margin-bottom: 3vh;
+    }
+
+    .title
+    {
+        font-size: var(--fontYourMom);
+    }
+
+    .informationSection
+    {
+        min-width: 40vh;
+        font-size: 26px;
+    }
+
+    .taxRow, .discountRow, .totalPriceRow
+    {
+        font-size: 26px;
+    }
+}
+
+@media all and (min-width: 200px) and (max-width: 1024px) and (orientation:landscape)
+{
+    #basketContainer
+    {
+        margin-top: 10vh;
+    }
+
+    .borderRemove
+    {
+        margin-bottom: 11vh;
+    }
+
+    .informationSection {
+         min-width: 100vh;
+         font-size: 26px;
+         margin-top: 10vh;
+    }
 }
