--- a/src/main/resources/static/styles/productFooter.css
+++ b/src/main/resources/static/styles/productFooter.css
@@ -86,11 +86,13 @@
     #footer
     {
         font-size: var(--fontRegular);
+        margin-top: 0;
     }
 }
 
 @media all and (min-width: 200px) and (max-width: 1024px) and (orientation:landscape)
 {
+
     #footer .icon {
         height: 6vh;
         width: 6vh;
