--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -80,7 +80,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                 </section>
                 <section id="addToBasketContent">
                     <section id="addToBasketDetails">
-                        <span th:text="#{basket.names}" style="font-size:var(--fontRegular);"></span>
+                        <span th:text="#{basket.names}" class="fancyHeader"></span>
                         <div id="addToBasketName" class="addToBasketDetail">
                             <input class="fancyInput" type="text" name="nameInput" id="nameInput" value="Untitled" maxlength="25">
                         </div>
@@ -94,7 +94,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                                 </div>
                                 <div class="fancyContent">
                                     <div class="arrowLeft" id="sizeArrowLeft" alt="<" onclick="decreaseSize()"></div>
-                                    <input type="text" id="sizeInput" class="fancyInput" value="30x30 cm" readonly>
+                                    <input type="text" id="sizeInput" class="fancyInput" value="20x20 cm" readonly>
                                     <div class="arrowRight" id="sizeArrowRight" alt=">" onclick="increaseSize()"></div>
                                 </div>
                             </div>
@@ -181,14 +181,14 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                 <div id="familyTreeOptionsContainer">
 
                     <div id="infoText" style="text-align: center;">
-                        <span style="font-size: 18px; color: var(--actionColor); font-weight:bold;" th:text="#{familyTree.info.how.to.title}"></span>
-                        <button onclick="removeInfoText()" style="color: white; width:30px;">X</button><br>
-                        <span th:text="#{familyTree.info.how.to}"></span>
+                        <span class="howToTitle" th:text="#{familyTree.info.how.to.title}"></span>
+                        <button onclick="removeInfoText()" class="xButton">X</button><br>
+                        <span class="howToText" th:text="#{familyTree.info.how.to}"></span>
                     </div>
 
                     <div class="fancySelection" id="bannerInput">
                         <div class="fancyHeader">
-                            <span th:text="#{familyTree.info.banner.text.name}"></span>
+                            <span class="designOption" th:text="#{familyTree.info.banner.text.name}"></span>
                             <div id="bannerTextInfoIcon" class="addToBasketInfoIcon infoPopup">
                                 <span class="infoPopupText"th:text="#{familyTree.info.banner.text}"></span>
                             </div>
@@ -201,7 +201,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <div class="fancySelection" id="bannerDesign">
                         <div class="fancyHeader">
-                            <span>Banner Design</span>
+                            <span class="designOption">Banner Design</span>
                             <div id="bannerDesignInfoIcon" class="addToBasketInfoIcon infoPopup">
                                 <span class="infoPopupText" th:text="#{familyTree.info.banner.design}"></span>
                             </div>
@@ -216,7 +216,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <div class="fancySelection" id="font">
                         <div class="fancyHeader">
-                            <span>Font</span>
+                            <span class="designOption">Font</span>
 <!--                            <div id="fontStyleInfoIcon" class="addToBasketInfoIcon infoPopup">-->
 <!--                                <span class="infoPopupText" th:text="#{familyTree.info.font.style}"></span>-->
 <!--                            </div>-->
@@ -233,7 +233,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <div class="fancySelection" id="boxSize">
                         <div class="fancyHeader">
-                            <span th:text="#{familyTree.info.box.size.name}"></span>
+                            <span class="designOption" th:text="#{familyTree.info.box.size.name}"></span>
 <!--                            <div id="boxSizeInfoIcon" class="addToBasketInfoIcon infoPopup">-->
 <!--                                <span class="infoPopupText" th:text="#{familyTree.info.box.size}"></span>-->
 <!--                            </div>-->
@@ -247,8 +247,8 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <div class="fancySelection" id="fontSize">
                         <div class="fancyHeader" style="margin-right: 1vh;">
-                            <span th:text="#{familyTree.info.big.font.name}"></span>
-                            <div id="bigFontSizeInfoIcon" class="addToBasketInfoIcon infoPopup">
+                            <span class="designOption designOptionCheckbox" th:text="#{familyTree.info.big.font.name}"></span>
+                            <div id="bigFontSizeInfoIcon" class="addToBasketInfoIcon infoPopup designOptionCheckbox">
                                 <span class="infoPopupText" th:text="#{familyTree.info.big.font}"></span>
                             </div>
                         </div>
