--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -27,6 +27,10 @@ body, html
     --fontSubtitle: 24px;
     --fontTitle: 26px;
     --fontYourMom: 48px;
+
+    --mFontRegular: 26px;
+    --mFontLarge: 34px;
+    --mFontTitle: 55px;
 }
 
 a
