--- a/src/main/resources/static/styles/cookiePrompt.css
+++ b/src/main/resources/static/styles/cookiePrompt.css
@@ -53,13 +53,13 @@
 {
     #cookiePromptModal
     {
-        font-size: 24px;
+        font-size: var(--mFontRegular);
     }
 
     #cookiePromptModal button
     {
         width: 350px;
         height: 50px;
-        font-size: 30px;
+        font-size: var(--mFontLarge);
     }
 }
