--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -114,7 +114,7 @@
                        placeholder="Type your password . . ." maxlength="60" required>
                 <hr>
                 <!-- T&C for account creation -->
-                <div style="display: flex; flex-direction: row; justify-content: center; font-size: 14px;">
+                <div class="termsAndConditions">
                     <p>
                         <span th:text="#{signup.terms.and.conditions.text}"></span><a href="https://docs.google.com/document/d/1lMEzya3HeEzvLG6wwDYhAw0memVBxNc8J3q-4sJN-u8/edit"
                            id="accountTermsAndConditions" target="_blank" class="termsAndConditionsLink"><span th:text="#{signup.terms.and.conditions.link}"></span></a>
